<resources>
    <string name="app_name">SoftUniProject</string>
    <string name="facebook_app_id">1291191594246282</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="image_description">image</string>
    <string name="reg_acc">Create Account</string>
    <string name="obligatory">* Obligatory</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username_mandatory">*Username</string>
    <string name="password_mandatory">*Password</string>
    <string name="confirm_pass_mandatory">*Confirm Password</string>
    <string name="login_wait">Attempt login&#8230;</string>
    <string name="login_success">Login successful!</string>
    <string name="login_need">You have to login first!</string>
    <string name="user_not_found">The user was not found!</string>
    <string name="username_not_found">Username not found.</string>
    <string name="not_match">The email address or password you entered is not valid.</string>
    <string name="sign_out">Sign out</string>
    <string name="name_profile">Name</string>
    <string name="profile_title">My Profile</string>
    <string name="enter_username">please enter username</string>
    <string name="enter_password">please enter password</string>
    <string name="enter_password_again">please confirm the password</string>
    <string name="register_wait">Attempt registering&#8230;</string>
    <string name="register_success">Registration successful!</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="item_deleted">Item deleted</string>
    <string name="favourites">Favourites</string>
    <string name="login">Login</string>
    <string name="wrong_pass">Incorrect password</string>
    <string name="user_exist">Sorry, that username already exist</string>
    <string name="save_to_favourites">Save in Favourites?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="add_photo">Add photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_to_fav">Add to Favourites</string>
    <string name="added_to_fav">Added Successfully</string>
    <string name="open">Open</string>
    <string name="connected">Nice! Connected to Internet</string>
    <string name="not_connected">Sorry! Not connected to Internet</string>
    <string name="unknown">unknown</string>
    <string name="settings">Settings</string>
    <string name="gps_question">GPS is not enabled. Do you want to go to Settings menu?</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="already_added">It\'s already added</string>
    <string name="video">Video</string>
</resources>
