<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@android:color/black" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <marinov.hristo.softuniproject.utils.RoundedImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/image_description"
                android:src="@mipmap/avatar" />

            <TextView
                android:id="@+id/txt_eg_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/username"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/holo_red_light" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/publish_btn"
                android:text="@string/log_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/publish_btn"
                android:text="@string/register"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>