<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@android:color/black" />

    <ScrollView
        android:id="@+id/scroll_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <marinov.hristo.softuniproject.utils.RoundedImageView
                android:id="@+id/roundImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description"
                android:src="@mipmap/avatar" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/profile_title"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_disabled"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/fname_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_disabled"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/lname_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_disabled"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/change_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/notification"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/change_photo"
                    android:textAllCaps="false"
                    android:textColor="@color/black_text"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/logout_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/logout"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>